--- a/Dark_Age2.css
+++ b/Dark_Age2.css
@@ -140,7 +140,7 @@ body, .roam-body-main {
 }
 
 .rm-caret, .bp3-icon-standard {
-    color: #fffc !important;
+    color: #000 !important;
     opacity: 1 !important;
 }
 
