--- a/darkage_alt.css
+++ b/darkage_alt.css
@@ -1039,7 +1039,7 @@ span[style*="color: rgb(14, 90, 138);"] {
 }
 
 /* fix for width when left sidebar open */
-div[style*="padding-right: calc((100% - 568px) / 2); padding-left: calc((100% - 1032px) / 2);"] {
+div[style*="padding-right: calc((100% - (--reduce-padding-right) / 2); padding-left: calc((100% - (--reduce-padding-left) / 2);"] {
     padding-right: calc((100% - var(--reduce-padding-right)) / 2) !important;
     padding-left: calc((100% - var(--reduce-padding-left)) / 2) !important;
 }
