--- a/better-dark-age-alt.css
+++ b/better-dark-age-alt.css
@@ -13,29 +13,15 @@ body {
   background-color: inherit !important;
 }
 
-
-
-.rm-bullet--closed .rm-bullet__inner {
-  /* background-color: var(--closed-bullets) !important; */ /* DEPRECATED */
-  border: 4px solid var(—bullet-closed-border);
-}
-
 .rm-bullet__inner {
   background-color: var(--bullets) !important;
 }
 
-/*
-
-.roam-bullet-closed {
-  background-color: var(--closed-bullets) !important;
+.rm-bullet--closed .rm-bullet__inner{
+  border: 4px solid var(--closed-bullets) !important;
 }
 
-.simple-bullet-inner {
-  background-color: var(--bullets) !important;
-}
-*/
-
-.simple-bullet-inner:hover {
+.rm-bullet__inner:hover {
   background-color: var(--icons-hover) !important;
 }
 
